--- a/index.html
+++ b/index.html
@@ -3,17 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Transmuscle é o primeiro e único campeonato de fisiculturismo
+    voltado exclusivamente para o público transgênero no
+    Brasil. Ele busca promover a inclusão, a igualdade de
+    oportunidades e a celebração da diversidade de corpos
+    dentro da comunidade trans."
+    />
+    <meta
+      name="keywords"
+      content="Transmuscle, fisiculturismo, trans, não-binário, inclusão, diversidade"
+    />
+    <meta
+      property="og:title"
+      content="Transmuscle - Campeonato de Fisiculturismo Trans e Não-Binário"
+    />
+    <meta
+      property="og:description"
+      content="O primeiro campeonato de fisiculturismo do Mundo dedicado a atletas trans e não-binários."
+    />
+    <meta property="og:image" content="/android-chrome-192x192.png" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <title>Transmuscle</title>
   </head>
   <body>
